공지사항 및 자료실 완성

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>웹카페 - HTML/CSS Basic</title>
     <link rel="shortcut icon" href="assets/common/webcafe.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <script src="js/main.js" defer></script> -->
+    <script src="js/main.js" defer></script>
     <!-- <script src="./js/jquery.min.js"></script>
     <script src="./js/menu-tab.js"></script> -->
   </head>
+
 
   <body>
     <div class="skip-navigation">
