신규 이벤트 및 관련사이트

--- a/main.html
+++ b/main.html
@@ -285,8 +285,29 @@
       </div>
       <div class="group group3">
         <div class="gradient-effect">
-          <section class="event">신규 이벤트</section>
-          <section class="related">관련 사이트</section>
+          <section class="event">
+            <h2 class="event-title">신규 <span class="point-color">이벤트</span></h2>
+            <div class="event-button-area">
+              <button type="button" class="event-button-previous">이전 이벤트 보기</button>
+              <button type="button" class="event-button-next">다음 이벤트 보기</button>
+            </div>
+            <div id="event-detail">
+              <span class="event-thumbnail">
+                <img src="./assets/free_gift.gif" alt="이벤트 경품 : 웹표준 핵심가이드 북 도서 증정" />
+              </span>
+              <p class="event-brief"><em>웹표준 핵심 가이드북 2 출시!</em> 선착순 500명 한정으로 증정.</p>
+            </div>
+          </section>
+          <section class="related">
+            <h2 class="related-title">관련 <span class="point-color">사이트</span></h2>
+            <ul class="related-list">
+              <li><a href="#">데이원 컴퍼니</a></li>
+              <li><a href="#">W3C</a></li>
+              <li><a href="#">제로 베이스</a></li>
+              <li><a href="#">CSS ZenGarden</a></li>
+              <li><a href="#">웹접근성 연구소</a></li>
+            </ul>
+          </section>
         </div>
         <section class="favorite">인기 사이트</section>
       </div>
