신규 이벤트 디자인 완성

--- a/main.html
+++ b/main.html
@@ -291,7 +291,7 @@
               <button type="button" class="event-button-previous">이전 이벤트 보기</button>
               <button type="button" class="event-button-next">다음 이벤트 보기</button>
             </div>
-            <div id="event-detail">
+            <div id="event-detail" class="event-detail">
               <span class="event-thumbnail">
                 <img src="./assets/free_gift.gif" alt="이벤트 경품 : 웹표준 핵심가이드 북 도서 증정" />
               </span>
