관련 사이트 디자인 완성

--- a/main.html
+++ b/main.html
@@ -300,7 +300,7 @@
           </section>
           <section class="related">
             <h2 class="related-title">관련 <span class="point-color">사이트</span></h2>
-            <ul class="related-list">
+            <ul class="related-list" tabindex="0">
               <li><a href="#">데이원 컴퍼니</a></li>
               <li><a href="#">W3C</a></li>
               <li><a href="#">제로 베이스</a></li>
