--- a/main.html
+++ b/main.html
@@ -1,1 +1,16 @@
 <!DOCTYPE html>
+<html lang="ko-KR">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>웹카페</title>
+</head>
+<body>
+  <header class="header">헤더</header>
+  <div class="visual">비주얼</div> 
+  <main class="main">메인</main>
+  <aricle class="slogan">슬로건</aricle>
+  <footer class="footer">푸터</footer>
+</body>
+</html>
