--- a/main.html
+++ b/main.html
@@ -7,10 +7,18 @@
   <title>웹카페</title>
 </head>
 <body>
-  <header class="header">헤더</header>
+  <header class="header">
+    <img src="./assets/logo.png" alt="web cafe">
+  </header>
   <div class="visual">비주얼</div> 
-  <main class="main">메인</main>
-  <aricle class="slogan">슬로건</aricle>
-  <footer class="footer">푸터</footer>
+  <main class="main">
+    <div class="group group1">group1</div>
+    <div class="group group2">group2</div>
+    <div class="group group3">group3</div>
+  </main>
+  <article class="slogan">슬로건</article>
+  <footer class="footer">
+    <div class="footer-inner">푸터</div>
+  </footer>
 </body>
 </html>
