--- a/main.html
+++ b/main.html
@@ -5,10 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>웹카페</title>
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <header class="header">
-    <img src="./assets/logo.png" alt="web cafe">
+    <h1 class="logo">
+      <a href="./index.html">
+        <img src="./assets/logo.png" alt="web cafe">
+      </a>
+    </h1>
   </header>
   <div class="visual">비주얼</div> 
   <main class="main">
