로고 및 안내링크 마크업

--- a/main.html
+++ b/main.html
@@ -15,13 +15,31 @@
       <a href="./index.html">
         <img src="./assets/logo.png" alt="web cafe">
       </a>
+      <ul class="member-service">
+        <li>
+          <a href="/">홈</a>
+        </li>
+        <li>
+          <a href="/">로그인</a>
+        </li>
+        <li>
+          <a href="/">회원가입</a>
+        </li>
+        <li>
+          <a href="/">사이트맵</a>
+        </li>
+        <li>
+          <a href="/">english</a>
+        </li>
+      </ul>
     </h1>
   </header>
   <div class="visual">비주얼</div> 
-  <main class="main">
+  <main class="main clearfix">
     <div class="group group1">group1</div>
     <div class="group group2">group2</div>
     <div class="group group3">group3</div>
+    <!-- <div class="clearfix"></div> -->
   </main>
   <article class="slogan">슬로건</article>
   <footer class="footer">
