--- a/main.html
+++ b/main.html
@@ -15,25 +15,32 @@
       <a href="./index.html">
         <img src="./assets/logo.png" alt="web cafe">
       </a>
-      <ul class="member-service">
-        <li>
-          <a href="/">홈</a>
-        </li>
-        <li>
-          <a href="/">로그인</a>
-        </li>
-        <li>
-          <a href="/">회원가입</a>
-        </li>
-        <li>
-          <a href="/">사이트맵</a>
-        </li>
-        <li>
-          <a href="/">english</a>
-        </li>
-      </ul>
     </h1>
+    <!-- 설정 -> 바로가기 키 -> emmet 약어 확장 활용 -->
+      <!-- ul.member-service>li*>span[aria-hidden="true"]{:}+a[href="/"] -->
+    <ul class="member-service">
+      <li>
+        <a href="/">홈</a>
+      </li>
+      <li>
+        <span aria-hidden="true">:</span>
+        <a href="/">로그인</a>
+      </li>
+      <li>
+        <span aria-hidden="true">:</span>
+        <a href="/">회원가입</a>
+      </li>
+      <li>
+        <span aria-hidden="true">:</span>
+        <a href="/">사이트맵</a>
+      </li>
+      <li>
+        <span aria-hidden="true">:</span>
+        <a href="/">english</a>
+      </li>
+    </ul>
   </header>
+  
   <div class="visual">비주얼</div> 
   <main class="main clearfix">
     <div class="group group1">group1</div>
