건너뛰기 링크 추가

--- a/main.html
+++ b/main.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+  <div class="skip-nav">
+    <a href="#mainContent">본문 바로가기</a>
+  </div>
   <header class="header">
     <h1 class="logo">
       <a href="./index.html">
@@ -42,7 +45,7 @@
   </header>
   
   <div class="visual">비주얼</div> 
-  <main class="main clearfix">
+  <main class="main clearfix" id="mainContent">
     <div class="group group1">group1</div>
     <div class="group group2">group2</div>
     <div class="group group3">group3</div>
