--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <!-- parsing이 끝나고 script 실행하도록 defer 선언 -->
   <!-- <script src="./js/jquery.min.js" defer></script>
-  <script src="./js/menu-tab.js"></script> -->
+  <script src="./js/menu-tab.js" defer></script> -->
 </head>
 <body>
   <div class="skip-nav">
@@ -151,7 +151,12 @@
     </nav>
   </header>
   
-  <div class="visual">비주얼</div> 
+  <div class="visual">
+    <div class="visual-text">
+      Web Standards &amp; Accessibility
+    </div>
+
+  </div> 
   <main class="main clearfix" id="mainContent">
     <div class="group group1">group1</div>
     <div class="group group2">group2</div>
@@ -162,5 +167,7 @@
   <footer class="footer">
     <div class="footer-inner">푸터</div>
   </footer>
+  <!-- <script src="./js/jquery.min.js" ></script>
+  <script src="./js/menu-tab.js" ></script> -->
 </body>
 </html>
