--- a/main.html
+++ b/main.html
@@ -158,7 +158,27 @@
 
   </div> 
   <main class="main clearfix" id="mainContent">
-    <div class="group group1">group1</div>
+    <div class="group group1">
+      <section class="login">
+        <h2 class="login-title">로그인</h2>
+        <form method="POST" action="https://formspree.io/seulbinim@gmail.com" class="login-form">
+          <fieldset>
+            <legend> 로그인 폼 </legend>
+            <div class="user-email">
+              <label for="userEmail">아이디</label><input type="email" id="userEmail" name="uid" required placeholder="이메일 주소">
+            </div>
+            <div class="user-password">
+              <label for="userPassword">비밀번호</label><input type="password" id="userPassword" name="upw" required placeholder="8자리 이상">
+            </div>
+            <button type="submit" class="button-login">로그인</button>  
+          </fieldset>
+        </form>
+        <div class="sign">
+          <a href="/" class="icon-right-open">회원가입</a>
+          <a href="/" class="icon-right-open">아이디/비밀번호 찾기</a>
+        </div>
+      </section>
+    </div>
     <div class="group group2">group2</div>
     <div class="group group3">group3</div>
     <!-- <div class="clearfix"></div> -->
