유효형 검사 배너 완성

--- a/main.html
+++ b/main.html
@@ -178,6 +178,21 @@
           <a href="/" class="icon-right-open">아이디/비밀번호 찾기</a>
         </div>
       </section>
+      <section class="validation">
+        <h2 class="a11y-hidden">유효성 검사 배너</h2>
+        <ul class="validation-list">
+          <li>
+            <a href="https://validator.w3.org/" target="_blank" title="마크업 유효성 검사 사이트로 이동(새창)" rel="noopener noreferrer">
+              W3C Markup Validation
+            </a>
+          </li>
+          <li>
+            <a href="https://jigsaw.w3.org/css-validator/" target="_blank" title="CSS 유효성 검사 사이트로 이동(새창) rel="noopener noreferrer"">
+              CSS Validation Service
+            </a>
+          </li>
+        </ul>
+      </section>
     </div>
     <div class="group group2">group2</div>
     <div class="group group3">group3</div>
