검색 폼 마크업

--- a/main.html
+++ b/main.html
@@ -217,7 +217,24 @@
         </dl>
       </section>
     </div>
-    <div class="group group2">group2</div>
+    <div class="group group2">
+      <section class="search">
+        <h2 class="a11y-hidden">검색</h2>
+        <form method="POST" action="https://formspree.io/seulbinim@gmail.com" class="search-form">
+          <fieldset>
+            <legend>검색 폼</legend>
+            <div class="search-form-inner">
+              <div class="search-input">
+                <label for="search" class="icon-search">자료검색</label>
+                <input type="search" id="search" name="search"
+                        placeholder="검색어를 입력하세요." required>
+              </div>
+              <button type="submit" class="button-search">검색</button>
+            </div>
+          </fieldset>
+        </form>
+      </section>
+    </div>
     <div class="group group3">group3</div>
     <!-- <div class="clearfix"></div> -->
   </main>
