--- a/main.html
+++ b/main.html
@@ -310,7 +310,36 @@
         <a href="/" class="icon-plus news-more more" title="새소식" aria-labelledby="newsTitle">더보기</a>
       </section>
     </div>
-    <div class="group group3">group3</div>
+    <div class="group group3">
+      <div class="gradient-effect spacing-sm">
+        <section class="event">
+          <h2 class="event-title headline">신규 <span class="accent-color">이벤트</span></h2>
+          <div class="event-button">
+            <button class="event-button-prev">이전 이벤트 보기</button>
+            <button class="event-button-next">다음 이벤트 보기</button>
+          </div>
+          <div id="eventDetail">
+            <p class="event-thumbnail">
+              <img src="assets/free_gift.gif" alt="이벤트 경품 : 웹표준 핵심 가이드북 2 HTML5+CSS3 도서 증정">
+            </p>
+            <p class="event-brief">
+              <em class="normal-style">웹표준 핵심 가이드북 2 출시!</em>
+              선착순 500명 한정으로 증정.
+            </p>
+          </div>
+        </section>
+        <section class="related">
+          <h2 class="related-title headline">관련 <span class="accent-color">사이트</span></h2>
+          <ul class="related-list reset-list" tabindex="0">
+            <li><a href="/">멀티캠퍼스</a></li>
+            <li><a href="/">W3C</a></li>
+            <li><a href="/">CSS ZenGarden</a></li>
+            <li><a href="/">웹접근성 연구소</a></li>
+            <li><a href="/">Web Standards</a></li>
+          </ul>
+        </section>
+      </div>
+    </div>
     <!-- <div class="clearfix"></div> -->
   </main>
   <article class="slogan">슬로건</article>
