신규이벤트 완성

--- a/main.html
+++ b/main.html
@@ -315,8 +315,10 @@
         <section class="event">
           <h2 class="event-title headline">신규 <span class="accent-color">이벤트</span></h2>
           <div class="event-button">
-            <button class="event-button-prev">이전 이벤트 보기</button>
-            <button class="event-button-next">다음 이벤트 보기</button>
+            <!-- <button class="event-button-prev">이전 이벤트 보기</button>
+            <button class="event-button-next">다음 이벤트 보기</button> -->
+            <button class="event-button-prev" aria-label="이전 이벤트 보기"></button>
+            <button class="event-button-next" aria-label="다음 이벤트 보기"></button>
           </div>
           <div id="eventDetail">
             <p class="event-thumbnail">
