인기사이트 마크업

--- a/main.html
+++ b/main.html
@@ -341,6 +341,18 @@
           </ul>
         </section>
       </div>
+      <div class="gradient-effect spacing-sm gap-top-md">
+        <section class="favorite">
+          <h2 class="favorite-title headline" id="favoriteTitle">인기 <span class="accent-color">사이트</span>          </h2>
+          <ol class="reset-list favorite-list">
+            <li class="no1"><a href="/">W3C</a><em class="up" aria-label="순위 상승"></em></li>
+            <li class="no2"><a href="/">CSS ZenGarden</a><em class="down" aria-label="순위 하락"></em></li>
+            <li class="no3"><a href="/">MDN</a><em class="stop" aria-label="순위 변동없음"></em></li>
+            <li class="no4"><a href="/">Web Standards</a><em class="up" aria-label="순위 상승"></em></li>
+          </ol>
+          <a href="/" class="favorite-more more icon-plus" title="인기사이트" aria-labelledby="favoriteTitle">더보기</a>
+        </section>
+      </div>
     </div>
     <!-- <div class="clearfix"></div> -->
   </main>
